<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dip"
    android:layout_height="200dip"
    android:background="@drawable/background_repeat"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tituloAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/titulo_dialog_acerca_de"
        android:textColor="@color/blanco"
        android:textStyle="bold" >
    </TextView>

    <ImageView
        android:id="@+id/logoAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/logo_launcher" />

    <TextView
        android:id="@+id/versionAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dip"
        android:gravity="center"
        android:text="@string/mensaje_dialog_acerca_de"
        android:textColor="@color/blanco" >
    </TextView>

    <Button
        android:id="@+id/btnAceptar"
        style="@style/boton_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/opcion_dialog_aceptar" >
    </Button>

</LinearLayout>